--- a/requirements.txt
+++ b/requirements.txt
@@ -4,16 +4,23 @@ altair==5.0.1
 async-timeout==4.0.2
 attrs==23.1.0
 beautifulsoup4==4.12.2
+blinker==1.6.2
+cachetools==5.3.1
 certifi==2023.5.7
 charset-normalizer==3.1.0
+click==8.1.4
 contourpy==1.1.0
 cycler==0.11.0
 dataclasses-json==0.5.9
+decorator==5.1.1
 fonttools==4.40.0
 frozenlist==1.3.3
 fsspec==2023.6.0
+gitdb==4.0.10
+GitPython==3.1.31
 greenlet==2.0.2
 idna==3.4
+importlib-metadata==6.8.0
 Jinja2==3.1.2
 joblib==1.3.1
 jsonschema==4.17.3
@@ -21,10 +28,12 @@ kiwisolver==1.4.4
 langchain==0.0.224
 langchainplus-sdk==0.0.20
 llama-index==0.7.1
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
 matplotlib==3.7.2
+mdurl==0.1.2
 multidict==6.0.4
 mypy-extensions==1.0.0
 nest-asyncio==1.5.6
@@ -34,28 +43,42 @@ openai==0.27.8
 openapi-schema-pydantic==1.2.4
 packaging==23.1
 pandas==2.0.3
-Pillow==10.0.0
+Pillow==9.5.0
+protobuf==4.23.4
+pyarrow==12.0.1
 pydantic==1.10.11
+pydeck==0.8.1b0
+Pygments==2.15.1
+Pympler==1.0.1
 pyparsing==3.0.9
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0
 regex==2023.6.3
 requests==2.31.0
+rich==13.4.2
 scikit-learn==1.3.0
 scipy==1.11.1
 six==1.16.0
+smmap==5.0.0
 soupsieve==2.4.1
 SQLAlchemy==2.0.18
 srt==3.5.3
+streamlit==1.24.1
 tenacity==8.2.2
 threadpoolctl==3.1.0
 tiktoken==0.4.0
+toml==0.10.2
 toolz==0.12.0
+tornado==6.3.2
 tqdm==4.65.0
 typing-inspect==0.8.0
 typing_extensions==4.5.0
 tzdata==2023.3
+tzlocal==4.3.1
 urllib3==1.26.16
+validators==0.20.0
 yarl==1.9.2
+zipp==3.16.0
